<resources>
    <string name="app_name">SSSLoginActivity</string>
    <string name="name">이름</string>
    <string name="name_en">Name</string>
    <string name="id">아이디</string>
    <string name="id_en">ID</string>
    <string name="password">패스워드</string>
    <string name="password_en">Password</string>
    <string name="log_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="image_name">My Image</string>
    <string name="go_to_main">메인으로</string>
    <string name="age">나이</string>
    <string name="mbti">MBTI</string>
</resources>