<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/my_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/image_name"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:text="@string/id"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_icon"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/id_en"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password_en"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tv_pwd"
        app:layout_constraintStart_toStartOf="@+id/tv_pwd"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwd" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="btnClicked"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/et_pwd"
        app:layout_constraintStart_toStartOf="@+id/et_pwd"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="btnClicked"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>