<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/image_name"
        android:scaleType="centerInside"
        android:src="@drawable/angrybirds_03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/id"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_icon"
        app:layout_constraintStart_toStartOf="@+id/login_icon"
        app:layout_constraintTop_toBottomOf="@+id/login_icon" />

    <TextView
        android:id="@+id/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_icon"
        app:layout_constraintStart_toStartOf="@+id/login_icon"
        app:layout_constraintTop_toBottomOf="@+id/login_id" />

    <TextView
        android:id="@+id/login_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_icon"
        app:layout_constraintStart_toStartOf="@+id/login_icon"
        app:layout_constraintTop_toBottomOf="@+id/login_name" />

    <TextView
        android:id="@+id/login_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mbti"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_icon"
        app:layout_constraintStart_toStartOf="@+id/login_icon"
        app:layout_constraintTop_toBottomOf="@+id/login_age" />

    <Button
        android:id="@+id/btn_backToSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/go_to_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_icon"
        app:layout_constraintStart_toStartOf="@+id/login_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>